plugins {
	id 'java'
}

group = 'nipx'
version = '1.0'

sourceSets.main.java.srcDirs = ["src"]

repositories {
	mavenCentral()
	maven { url 'https://jitpack.io' }
	mavenLocal()
}

jar {
	manifest {
		attributes(
				'Agent-Class': 'nipx.Main',
				'Premain-Class': 'nipx.Main',
				'Can-Retransform-Classes': true,
				'Can-Redefine-Classes': true
		)
	}
//	from(configurations.compileClasspath.asList().toArray()) { include "**" }
	from {
		configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
	}
}
tasks.withType(JavaCompile) {
	options.incremental = true
	sourceCompatibility = 8
	targetCompatibility = 8

//		options.compilerArgs += "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED"
	options.compilerArgs.remove("--enable-preview")
	//	options.compilerArgs.add("-verbose")
}

dependencies {
	annotationProcessor "com.github.EB-wilson.UniverseCore:annotations:2.3.0"

//	implementation "net.bytebuddy:byte-buddy:1.17.6"
}

test {
	useJUnitPlatform()
}